change to new version 0.8.1

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
-Theme Name: Andacollo te Encanta Prueba
-Version: 0.3.2
+Theme Name: Andacollo te Encanta
+Version: 0.8.1
 Theme URI: 
 Author: 404Development
 Author URI: 
