--- a/css/main.css
+++ b/css/main.css
@@ -73,7 +73,7 @@ nav{
   }
   nav a{
     font-family: Raleway;
-    margin-right: 2em;
+    margin: 0 1.5em;
     text-decoration: none;
     color: white;
   }
@@ -352,8 +352,12 @@ footer{
   .footer__logo{
     /* grid-column: 2/3; */
     /* padding: 2rem; */
-    height: 30%;
+    height: 8em;
     align-self: center;  
+  }
+  .footer__logos{
+    height: 6em;
+    justify-content:space-between;  
   }
   .footer__texto{
     display: flex;
@@ -431,7 +435,7 @@ footer{
   .footer__logos{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   .footer {
@@ -458,6 +462,23 @@ footer{
   display: none;
 }
 
+
+/* FOOTER */
+.footer--img{
+  background-size: cover;
+  /* background-position: -700px; */
+  /* background-position: center; */
+}
+footer h2{
+  grid-column: 1/13;
+  font-size: 1.2rem;
+  color: white;
+  
+}
+footer h3{
+  grid-column: 1/13;
+  font-size: 1.5rem;
+}
 
 
 
@@ -558,13 +579,13 @@ footer{
   /* MAIN */
   main{
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 20vh 80vh 90vh;
+    grid-template-rows: 20vh 80vh 1fr ;
     column-gap: 5px;
   }
   .grid--12-2{
     padding: 0;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 10% 70% 20%;
+    grid-template-rows: 64vh 17vh;
   }
   /* .grid--12-2-0{
     padding: 0;
@@ -576,7 +597,7 @@ footer{
     display: none;
   }
   header {
-    grid-template-rows: 65%;
+    grid-template-rows: 70%;
     grid-column: 1/7;
   }
   .header__image{
@@ -603,28 +624,34 @@ footer{
     font-size: 1rem;
     text-align: center;
     margin-top: .6em;
+    display: none;
   }
   .cartas__container{
     grid-column: 1/7;
+    grid-row: 1/3;
     flex-direction: column;
-    padding: 0 1em 1em 1em;
-    max-height: 121px;
+    /* padding: 0 1em 1em 1em; */
+    max-height: 64vh;
+    gap: .5em;
+    justify-content: space-evenly;
   }
-  .cartas {
-    min-width: 330px;
+  .cartas{
+    min-width: 80vw;
     position: relative;
-    
+    /* max-height: 100%; */
+    /* width: 100%; */
+    height: 16vh;
   }
   .cartas img{
     width: 100%;
-    height: 100px;
+    height: 100%;
     object-fit: cover;
     border-radius: 10px;
   }
   .titulo__container{
     margin-top: 0;
     position: absolute;
-    bottom: -7px;;
+    bottom: 0px;
     left: 0px;
     right: 0px;
   }
@@ -636,18 +663,19 @@ footer{
   }
   .aside--servicios{
     grid-column: 1/7;
-    grid-row: 3/4;
+    grid-row: 2/4;
     flex-direction: row;
   }
   .aside--servicios p{
-    grid-column: 1/2;
-    font-size: .7rem;
+    /* grid-column: 1/2; */
+    font-size: 1.7vh;
     padding: 0;
-    margin: 2em 0;
+    margin: 2.5em 1em;
+    text-align: right;
   }
   .aside--s{
-    width: 60px;
-    margin: .5em 2em;
+    width: 15vw;
+    margin: .7em 1em;
   }
   .productos {
     grid-column: 1/7;
@@ -662,92 +690,85 @@ footer{
     font-size: 1rem;
     text-align: center;
     margin-top: 1em;
+    display: none;
   }
   .cartas__container--productos{
     grid-column: 1/7;
+    grid-row: 1/4;
     flex-direction: column;
-    padding: 0 1em 1em 1em;
-    max-height: 133px;
+    max-height: 64vh;
+    gap: .5em;
+    justify-content: space-evenly;
   }
   .aside--productos{
     grid-column: 1/7;
-    grid-row: 3/4;
+    grid-row: 2/4;
     flex-direction: row;
   }
   .aside--productos p {
     grid-column: 1/2;
-    font-size: .7rem;
+    font-size: 1.7vh;
     padding: 0;
-    margin: 2em .8em;
+    margin: 2.5em 1em;
   }
   .aside--p {
-    width: 60px;
-    margin: .5em 2em;
+    width: 15vw;
+    margin: 1.2em 1em;
   }
   footer{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 20vh 71vh 15vh;
+    grid-template-rows: 16vh 71vh 15vh;
     column-gap: 2em;
     height: 98vh;
     background-size: 400px;
   }
   .footer__content {
     flex-direction: column;
-    margin-top: 1em;
+    margin: 1em auto 0 auto;
   }
   .footer__section {
     grid-column: 1/7;
   }
   .footer__logo{
     height: 100%;
-    width: 50px;
+    width: 10vh;
     margin: 0 0 1em 0;
   }
   .footer__text{
     margin: 0 0 1em 0;
     text-align: center;
   }
+  .footer__text h4{
+    margin-bottom: 0;
+  }
   .footer__text--sitios{
     text-align: center;
+  }
+  .footer__text--sitios h2 {
+    margin-bottom: .5em;
+  }
+  .footer__text--sitios h3 {
+    margin-bottom: .2em;
   }
   .footer__logos{
     flex-direction: row;
     justify-content: space-evenly;
+    height: 5em;
+    margin: .3em 0 0 0;
+  }
+  .footer {
+    margin-top: 2em;
   }
   .footer--img{
     background-image: url(../images/footer-mobile.svg);
     grid-column: 1/7;
     /* background-size: cover; */
     /* background-position: -396px; */
+    background-size: contain;
+    background-position: bottom;
   }
   
 
   }
-
-/* FOOTER */
-  .footer--img{
-    background-size: cover;
-    /* background-position: -700px; */
-    /* background-position: center; */
-  }
-  footer h2{
-    grid-column: 1/13;
-    font-size: 1.2rem;
-    color: white;
-    
-  }
-  footer h3{
-    grid-column: 1/13;
-    font-size: 1.5rem;
-  }
-
-
-/* @media screen and (max-width: 1365px) {
-  body * {
-    display: none;
-   
-  }
-
-} */
 
