--- a/css/archive-perfiles.css
+++ b/css/archive-perfiles.css
@@ -86,6 +86,7 @@ main{
   height: auto;
   border-radius: 0px 10px 10px 0px;
   max-width: 210px;
+  object-fit: cover;
 }
 .texto__container {
   flex-grow: 2;
@@ -224,7 +225,14 @@ main{
 }
 /* Fin Interior 2 */
 
-
+.paginacion2{
+  /* grid-column: 4/7;
+  grid-row: 2/3; */
+  display: none;
+}
+.paginacion span{
+  font-family: Raleway;
+}
 
 
 
@@ -278,5 +286,72 @@ main{
   }
   .collage--servicios img {
     width: 40em;
+  }
+}
+
+
+@media screen and (max-width: 480px) and (min-width: 360px){
+  main {
+    grid-template-rows: 20vh 80vh 80vh;
+  }
+  .grid--12-2 {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 70vh 10vh;
+  }
+  .position-2-2 {
+    grid-column: 1/7;
+    grid-row: 2/3;
+  }
+  .aside--left {
+    display: none;
+    
+  }
+  .cartas-cat {
+    display: none;
+  }
+  .aside--right {
+    grid-column: 1/7;
+    grid-row: 2/3;
+  }
+  .aside--right img {
+    width: 5em;
+    z-index: 2;
+    filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(133deg) brightness(107%) contrast(101%);
+  }
+  .aside--right h1{
+    display: none;
+  }
+  .cartas__container--servicios {
+    grid-column: 1/7;
+    grid-row: 1/2;
+    margin: 0 auto;
+    /* max-width: 20vw; */
+    justify-content: space-evenly;
+  }
+  .img--servicios {
+    object-fit: cover;
+    max-width: 115px;
+  }
+  .cartas--servicios {
+    max-width: 50vh;
+    max-height: 17vh;
+  }
+  .extracto__descripcion {
+    display: none;
+  }
+  .paginacion {
+    grid-column: 2/4;
+    grid-row: 2/3;
+    z-index: 2;
+    padding: 0;
+    width: 1em;
+  }
+  .paginacion2{
+    grid-column: 4/7;
+    grid-row: 2/3;
+  }
+
+  .position-3-1 {
+    display: none;
   }
 }
