--- a/css/main.css
+++ b/css/main.css
@@ -575,24 +575,24 @@ footer h3{
   }
 }
 /* Mobile */
-@media screen and (max-width: 414px) {
+@media (max-width: 480px) and (min-width: 320px) {
   /* MAIN */
   main{
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 20vh 80vh 1fr ;
+    grid-template-rows: 20vh 83vh 83vh ;
     column-gap: 5px;
   }
   .grid--12-2{
     padding: 0;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 64vh 17vh;
+    grid-template-rows: 64vh 19vh;
   }
-  /* .grid--12-2-0{
+  .grid--12-2-0{
     padding: 0;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 10% 70% 20%;
-  } */
+    grid-template-rows: 64vh 19vh;
+  }
   .carousel {
     display: none;
   }
@@ -684,6 +684,9 @@ footer h3{
     grid-column: 1/7;
     grid-row: 3/4;
   }
+  .aside--productos p {
+    text-align: right;
+  }
   .productos h2{
     grid-column: 1/7;
     grid-row: 1/2;
@@ -712,7 +715,7 @@ footer h3{
     margin: 2.5em 1em;
   }
   .aside--p {
-    width: 15vw;
+    width: 16vw;
     margin: 1.2em 1em;
   }
   footer{
