--- a/css/archive-perfiles-dondecomer.css
+++ b/css/archive-perfiles-dondecomer.css
@@ -32,7 +32,7 @@
 }
 
 
-@media screen and (max-width: 414px) {
+@media (max-width: 414px) and (min-width: 320px) {
   .border-bottom {
     display: none;
   }
@@ -45,6 +45,15 @@
   }
   .aside--right {
     background-color: var(--dondecomer);
+  }
+  .btn__servicios {
+    background: white;
+  }
+  .btn__servicios label {
+    color: var(--dondecomer);
+  }
+  .position-3-1 {
+    grid-template-rows: 20% 60% 20%;
   }
 
 }
