--- a/css/archive-perfiles.css
+++ b/css/archive-perfiles.css
@@ -292,11 +292,12 @@ main{
 
 @media screen and (max-width: 480px) and (min-width: 360px){
   main {
-    grid-template-rows: 20vh 80vh 80vh;
+    grid-template-rows: 20vh 77vh 80vh;
   }
   .grid--12-2 {
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 70vh 10vh;
+    grid-template-rows: 67vh 10vh;
+
   }
   .position-2-2 {
     grid-column: 1/7;
@@ -314,9 +315,9 @@ main{
     grid-row: 2/3;
   }
   .aside--right img {
-    width: 5em;
+    display: none;
+    width: 5.6em;
     z-index: 2;
-    filter: invert(100%) sepia(0%) saturate(1%) hue-rotate(133deg) brightness(107%) contrast(101%);
   }
   .aside--right h1{
     display: none;
@@ -327,6 +328,8 @@ main{
     margin: 0 auto;
     /* max-width: 20vw; */
     justify-content: space-evenly;
+    /* max-height: 64vh; */
+    max-width: 300px;
   }
   .img--servicios {
     object-fit: cover;
@@ -345,13 +348,53 @@ main{
     z-index: 2;
     padding: 0;
     width: 1em;
+    display: none;
   }
   .paginacion2{
-    grid-column: 4/7;
+    display: flex;
+    gap: 1em;
+    grid-column: 1/7;
     grid-row: 2/3;
+    z-index: 2;
+    padding: 1em;
+    margin: auto;
+  }
+  .btn-posts {
+    width: 5em;
+    border: none;
+  }
+
+  .texto__container h1 {
+    grid-row: 1/-1;
+    padding: .5em;
+  }
+  .texto__container a {
+    grid-column: 2/5;
   }
 
   .position-3-1 {
+    grid-column: 1/7;
+    gap: 15px;
+  }
+  .position-3-1 h1{
+    grid-column: 2/6;
+    grid-row: 1/2;
+    margin: 1em 0;
+    font-size: 1.3rem;
+  }
+  .position-3-1 p{
+    grid-column: 2/6;
+    grid-row: 2/3;
+    text-align: justify;
+  }
+  .collage--servicios{
     display: none;
+  }
+  .aside--right--color{
+    grid-column: 1/7;
+    grid-row: 3/4;
+  }
+  .aside--right--color img{
+    width: 4em;
   }
 }
