--- a/css/home.css
+++ b/css/home.css
@@ -226,3 +226,83 @@ main {
     font-size: .8rem;
   }
 }
+
+/* Mobile */
+@media (max-width: 480px) and (min-width: 320px) { 
+  main{
+    grid-template-rows: 20vh 76vh 1vh;
+  }
+  .grid--12-2 {
+    grid-template-rows: 67vh 10vh;
+  }
+  .position-2-2 {
+    grid-column: 1/7;
+  }
+  .title--noticias {
+    display: none;
+  }
+  .cartas__container--noticias {
+    grid-column: 1/7;
+    grid-row: 1/2;
+    width: 300px;
+    margin: 1em 2em;
+    padding: 0;
+  }
+  .cartas--noticias {
+    min-width: 300px;
+    border-radius: 10px;
+  }
+  .texto__container h1{
+    grid-column: 1/5;
+    height: 100%;
+    border-radius: 0 9px 0 0;
+  }
+  .extracto__noticias {
+    display: none;
+  }
+  .autor__noticias {
+    grid-column: 1/7;
+    grid-row: 2/3;
+    margin: 0 1em;
+    text-align: center;
+    padding-top: 1em;
+  }
+  .texto__container a {
+    grid-column: 2/5;
+    margin-top: .5em;
+  }
+  .cartas--noticias img{
+    width: 115px;
+    object-fit: cover;
+    height: auto;
+  }
+  .img--noticias {
+    border-radius: 9px 0px 0px 9px;
+  }
+  .aside--noticias {
+    grid-column: 1/7;
+    grid-row: 2/-1;
+    flex-direction: row;
+  }
+  .aside--n {
+    width: 14vw;
+    margin: .3em 1em 0em 1em;
+  }
+  .aside-title{
+    display: none;
+  }
+  .aside--noticias p {
+    margin-top: 0em;
+    flex-grow: 2;
+    font-size: 1.5rem;
+    padding: 0;
+    align-self: center;
+    text-align: center;
+    
+  }
+  .paginacion {
+    display: none;
+  }
+}
+
+  
