--- a/css/main.css
+++ b/css/main.css
@@ -78,14 +78,14 @@ nav{
     color: white;
   }
   .active-item{
-    background-color: #222C3E;
+    background-color: #F4CE00;
     height: 3.4em;
     padding-top: 1.2em;
   }
 
   nav a:hover{
     text-decoration: underline;
-    color: #F4CE00;
+    color: black;
     transition:all 200ms ease-in;
   }
   nav li {
@@ -370,6 +370,8 @@ nav{
     width: 12em;
     margin: 2em 4em;
   }
+
+
 /* End Servicios */
 
 /* Section Productos */
@@ -593,9 +595,6 @@ footer h3{
   nav{
     height: 40px;
   }
-  nav ul{
-    /* padding: 0.6em; */
-  }
   .active-item {
     height: 2.5em;
     padding: .6em;
@@ -679,24 +678,25 @@ footer h3{
     width: 100%;
   }
 }
+
 /* Mobile */
 @media (max-width: 480px) and (min-width: 320px) {
   /* MAIN */
   main{
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 20vh 83vh 83vh ;
+    grid-template-rows: 20vh 77vh 83vh ;
     column-gap: 5px;
   }
   .grid--12-2{
     padding: 0;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 64vh 19vh;
+    grid-template-rows: 64vh 13vh;
   }
   .grid--12-2-0{
     padding: 0;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 64vh 19vh;
+    grid-template-rows: 64vh 13vh;
   }
   .carousel {
     display: none;
@@ -733,7 +733,7 @@ footer h3{
   }
   .cartas__container{
     grid-column: 1/7;
-    grid-row: 1/3;
+    grid-row: 1/2;
     flex-direction: column;
     /* padding: 0 1em 1em 1em; */
     max-height: 64vh;
@@ -768,29 +768,51 @@ footer h3{
   }
   .aside--servicios{
     grid-column: 1/7;
-    grid-row: 2/4;
+    grid-row: 2/-1;
     flex-direction: row;
   }
   .aside--servicios p{
     /* grid-column: 1/2; */
-    font-size: 1.7vh;
+    /* font-size: 1.7vh; */
+    font-size: 1.8rem;
     padding: 0;
-    margin: 2.5em 1em;
-    text-align: right;
+    /* margin: 2.5em 1em; */
+    text-align: center;
+    margin-top: 0;
+    flex-grow: 2;
+    align-self: center;
+  }
+  .aside-title-servicios {
+    display: none;
   }
   .aside--s{
-    width: 15vw;
+    width: 11vw;
     margin: .7em 1em;
   }
   .productos {
     grid-column: 1/7;
   }
-  .aside--productos {
+  .aside--productos{
     grid-column: 1/7;
-    grid-row: 3/4;
+    grid-row: 2/-1;
+    flex-direction: row;
   }
   .aside--productos p {
-    text-align: right;
+    /* font-size: 1.7vh; */
+    font-size: 1.8rem;
+    padding: 0;
+    /* margin: 2.5em 1em; */
+    text-align: center;
+    margin-top: 0;
+    flex-grow: 2;
+    align-self: center;
+  }
+  .aside--p {
+    width: 11vw;
+    margin: 1.2em 1em;
+  }
+  .aside-title-productos {
+    display: none;
   }
   .productos h2{
     grid-column: 1/7;
@@ -808,21 +830,9 @@ footer h3{
     gap: .5em;
     justify-content: space-evenly;
   }
-  .aside--productos{
-    grid-column: 1/7;
-    grid-row: 2/4;
-    flex-direction: row;
-  }
-  .aside--productos p {
-    grid-column: 1/2;
-    font-size: 1.7vh;
-    padding: 0;
-    margin: 2.5em 1em;
-  }
-  .aside--p {
-    width: 16vw;
-    margin: 1.2em 1em;
-  }
+  
+
+
   footer{
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -877,6 +887,5 @@ footer h3{
     background-position: bottom;
   }
   
-
   }
 
