--- a/css/single-perfil.css
+++ b/css/single-perfil.css
@@ -256,3 +256,123 @@ main{
   }
   
 }
+
+@media (min-width: 320px) and (max-width: 480px) {
+  main{
+    grid-template-rows: 18vh 130vh 195vh;
+  }
+  .grid--12-2{
+    grid-template-rows: 77% 170% 7%;
+  }
+  .position-2-1{
+    grid-column: 1/7;
+  }
+  .carta__container{
+    grid-template-columns: repeat(6, 1fr);
+    grid-column: 1/7;
+    grid-row: 1/2;
+    grid-template-rows: 15% 28% 47% 10%;
+    height: 100vh;
+    width: 90vw;
+    margin: 0 auto;
+  }
+  .carta--titulo{
+    grid-column: 1/7;
+    grid-row: 1/2;
+    padding: 1em 2em;
+  }
+  .carta--img{
+    grid-column: 1/7;
+    grid-row: 2/3;
+    margin: .8em auto 0 auto;
+  }
+  .carta--content{
+    grid-column: 1/7;
+    grid-row: 3/4;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 51% repeat(4, 12%);
+    margin: 0 auto;
+
+  }
+  .carta--descripcion{
+    grid-column: 1/7;
+    grid-row: 1/2;
+    /* margin: 1em 2em; */
+    padding: 0em 1.5em;
+    text-align: justify;
+  }
+  .info-contacto {
+    margin: 0 0;
+    justify-content: space-between;
+  }
+  .carta--nombre{
+    grid-column: 2/6;
+    grid-row: 2/3;
+  }
+  .carta--direccion {
+    grid-column: 2/6;
+    grid-row: 3/4;
+  }
+  .carta--telefono{
+    grid-column: 2/6;
+    grid-row: 4/5;
+  }
+  .carta--correo{
+    grid-column: 2/6;
+    grid-row: 5/6;
+    
+    
+  }
+  .info-contacto p {
+    flex-grow: 2;
+    margin-left: 1.7em;
+  }
+
+  .rrss {
+    display: flex;
+    grid-column: 2/6;
+    grid-row: 4/5;
+    width: 100%;
+    flex-direction: row;
+    margin: 0 auto .7em;
+    align-items: end;
+  }
+  .rrss img {
+    width: 2em;
+  }
+  .galeria--productos{
+    grid-column: 1/7;
+    grid-row: 2/3;
+    grid-template-columns: none;
+    grid-template-rows: auto;
+    justify-content: center;
+    gap: 0;
+    margin-top: 0;
+  }
+  .position-1{
+    align-self:  center;
+    /* margin-top: 1em; */
+  }
+  .position-2 {
+    align-self: center;
+  }
+  .producto img {
+    height: 14em;
+  }
+  .icono--servicio{
+    display: none;
+  }
+  .aside--right {
+    grid-column: 1/7 ;
+    grid-row: 3/4 ;
+  }
+  .aside--right h1 {
+    margin: .3em auto;
+    font-size: 2rem;
+    
+    
+  }
+  .aside--right img {
+    display: none;
+  }
+}
