--- a/css/single-perfil.css
+++ b/css/single-perfil.css
@@ -205,7 +205,7 @@ main{
 
 
 /* MEDIA QUERIES CSS */
-@media screen and (max-width: 1366px) {
+@media (min-width: 900px) and (max-width: 1366px) {
   .carta__container{
     grid-template-rows: 15% 85%;
   }
@@ -272,7 +272,7 @@ main{
     grid-column: 1/7;
     grid-row: 1/2;
     grid-template-rows: 15% 28% 47% 10%;
-    height: 100vh;
+    height: 630px;
     width: 90vw;
     margin: 0 auto;
   }
@@ -284,7 +284,8 @@ main{
   .carta--img{
     grid-column: 1/7;
     grid-row: 2/3;
-    margin: .8em auto 0 auto;
+    margin: .5em auto 0 auto;
+    width: 250px;
   }
   .carta--content{
     grid-column: 1/7;
@@ -297,28 +298,30 @@ main{
   .carta--descripcion{
     grid-column: 1/7;
     grid-row: 1/2;
-    /* margin: 1em 2em; */
+    margin: .5em 0;
     padding: 0em 1.5em;
     text-align: justify;
+    font-size: .9rem;
   }
   .info-contacto {
-    margin: 0 0;
+    margin: 0 auto;
     justify-content: space-between;
+    font-size: .8rem;
   }
   .carta--nombre{
-    grid-column: 2/6;
+    grid-column: 1/7;
     grid-row: 2/3;
   }
   .carta--direccion {
-    grid-column: 2/6;
+    grid-column: 1/7;
     grid-row: 3/4;
   }
   .carta--telefono{
-    grid-column: 2/6;
+    grid-column: 1/7;
     grid-row: 4/5;
   }
   .carta--correo{
-    grid-column: 2/6;
+    grid-column: 1/7;
     grid-row: 5/6;
     
     
@@ -358,6 +361,7 @@ main{
   }
   .producto img {
     height: 14em;
+    width: auto;
   }
   .icono--servicio{
     display: none;
