--- a/css/single.css
+++ b/css/single.css
@@ -224,6 +224,9 @@ main{
 }
 
 @media (min-width: 320px) and (max-width: 480px){
+  main {
+    grid-template-rows: 128px 81vh auto auto;
+  }
   .position-2-3 {
     grid-column: 1/7;
   }
@@ -234,27 +237,38 @@ main{
     grid-column: 1/7;
   }
   .grid--12-3 {
-    grid-template-rows: 3% 45% 29% 30%;
+    grid-template-rows: 3% 34% 25% 40%;
     grid-template-columns: repeat(6, 1fr);
+    padding: 0;
   }
-  
+  .grid--12-3-0 {
+    grid-template-columns: repeat(6, 1fr);
+    padding: 0;
+    grid-template-rows:  10% auto 7%;
+  }
+  .grid--12-3-1 {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: 124%;
+    padding: 0;
+  }
   .breadcrumb {
     display: none;
   }
   .img--noticias {
     /* display: none; */
-    grid-column: 1/13;
+    grid-column: 1/7;
     grid-row: 4/-1;
-    
+    margin: 0 auto;
   }
   .img--noticias img {
     height: 100%;
-    width: auto;
+    width: 20.5em;
+    object-fit: cover;
   }
   .aside--noticias {
-    grid-column: 1/13;
+    grid-column: 1/7;
     grid-row: 2/3;
-    
+    align-self: center;
   }
   .aside--noticias h1 {
     font-size: 2rem;
@@ -265,17 +279,55 @@ main{
   }
   .copete__noticia {
     font-size: .5rem;
+    grid-row: 3/4;
+    grid-column: 1/7;
+    margin: 2em 2em 0 2em;
   }
   .titulo__noticia{
+    display: none;
     font-size: 1rem;
+    grid-column: 1/7;
+    grid-row: 1/2;
   }
+  .content__noticia {
+    grid-column: 1/7;
+    grid-row: 1/-1;
+    font-size: .9rem;
+    white-space: pre-line;
+    line-height: 1.4em;
 
+  }
+  .content__noticia > p{
+    margin-bottom: 7em;
+  }
+  .footer__datos {
+
+  }
+  .img2__noticia {
+    grid-column: 1/7;
+  }
   .img2__noticia img {
     display: none;
     
   }
+  .footer__noticia {
+    grid-column: 1/7;
+  }
   .pie_de_foto {
     display: none;
   }
-
+  .aside--noticias-2 {
+    display: none;
+  }
+  .img--noticias2 {
+    padding: 0;
+    grid-column: 1/7;
+    grid-row: 1/-1;
+    margin: 1em auto;
+  }
+  .img--noticias2 img  {
+    height: 100%;
+    width: 20.5em;
+    object-fit: cover;
+  }
 }
