--- a/css/archive-perfiles-artesania.css
+++ b/css/archive-perfiles-artesania.css
@@ -34,7 +34,7 @@
  color: var(--artesania);
 }
 
-@media (max-width: 414px) and (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 480px){
   .border-bottom {
     display: none;
   }
