--- a/css/archive-perfiles-dondedormir.css
+++ b/css/archive-perfiles-dondedormir.css
@@ -32,7 +32,7 @@
   border-bottom: 2px solid var(--dondedormir);
 }
 
-@media (max-width: 414px) and (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 480px){
   .border-bottom {
     display: none;
   }
