--- a/css/archive-perfiles-emprendedor.css
+++ b/css/archive-perfiles-emprendedor.css
@@ -31,7 +31,7 @@
  color: var(--emprendedor);
 }
 
-@media (max-width: 414px) and (min-width: 320px) {
+@media (min-width: 320px) and (max-width: 480px){
   .border-bottom {
     display: none;
   }
