--- a/css/single.css
+++ b/css/single.css
@@ -53,6 +53,12 @@ main{
   grid-column: 4/13;
   grid-row: 2/-2;
 }
+.img--noticias2 {
+  grid-column: 4/13;
+  grid-row: 1/2;
+  /* height: 100%; */
+  /* object-fit: fill; */
+}
 .breadcrumb{
   grid-column: 1/8;
   grid-row: 1/2;
@@ -220,6 +226,14 @@ main{
   }
   .breadcrumb{
     padding: .5em 1.8em;
+  }
+  .img--noticias2 {
+    grid-column: 5/11;
+  }
+  .img--noticias2 img {
+    margin: 0 1em 0 1em;
+    width: auto;
+    height: 21.5em;
   }
 }
 
