--- a/css/archive-perfiles.css
+++ b/css/archive-perfiles.css
@@ -73,9 +73,10 @@ main{
   grid-row: 2/-2;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   max-width: 820px;
   /* filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.8)); */
+  gap: 2.4em;
 }
 .cartas--servicios{
   display: flex;
