--- a/css/single-perfil.css
+++ b/css/single-perfil.css
@@ -163,7 +163,22 @@ main{
   width: 12em;
   margin: 2em 4em;
 }
-
+.sellos{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 2em;
+  justify-content: space-between;
+  gap: 1em;
+}
+.sellos img{
+  width: 4.5em;
+  height: auto;
+  padding: 0;
+  margin: 0;
+  
+  -webkit-filter: drop-shadow(0px 0px 5px .5em #000);
+  filter: drop-shadow(0px 0px 5px .5em #000);
+}
 .donde-comer{
   background-color: var(--dondecomer);
   
