--- a/css/archive-perfiles-productor.css
+++ b/css/archive-perfiles-productor.css
@@ -33,7 +33,11 @@
 .aside--right h1{
  color: var(--productor);
 }
-
+.paginacion span.current {
+  background-color: var(--productor);
+  color: white;
+  border: 1px solid var(--productor);
+}
 @media (min-width: 320px) and (max-width: 480px){
   .border-bottom {
     display: none;
