--- a/css/main.css
+++ b/css/main.css
@@ -311,7 +311,7 @@ nav{
   text-align: center;
 }
 .title-slide {
-  background-color: rgba(243, 49, 49, 0.6);
+  background-color: rgba(243, 49, 49, 0.8);
   border-radius: 10px;
   height: 80px;
   /* margin-left: 4em; */
@@ -490,7 +490,7 @@ nav{
     letter-spacing: 1px;
     color: #FFFFFF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-top: 4em;
+    margin-top: 5.2em;
   }
   .aside--s{
     height: auto;
@@ -539,7 +539,7 @@ nav{
     letter-spacing: 1px;
     color: #FFFFFF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-top: 4em;
+    margin-top: 5.6em;
   }
   .aside--p{
     height: auto;
@@ -732,6 +732,35 @@ MEDIA QUERYS
 
 
 /* MEDIA QUERIES CSS */
+@media (min-width: 1366px) and (max-width: 1600px){
+  main {
+    width: 75vw;
+  }
+  .mySlides{
+    height: 585px;
+  }
+  .servicios h2{
+    grid-column: 2/9;
+    margin-left: 1em;
+  }
+  .aside--s{
+    width: 7.8em;
+  }
+
+  .productos h2{
+    grid-column: 5/12;
+    margin-left: 1em;
+  }
+  .aside--p{
+    width: 7.8em;
+  }
+  .titulo__container p{
+    font-size: 1.8rem;
+  }
+  .footer__content{
+    padding: 1.8em 0;
+  }
+}
 @media (min-width: 900px) and (max-width: 1366px){
   .aside-title-mobile {
     display: none;
