--- a/css/main.css
+++ b/css/main.css
@@ -286,9 +286,9 @@ nav{
 /* Fading animation */
 .fade {
   -webkit-animation-name: fade;
-  -webkit-animation-duration: 4s;
+  -webkit-animation-duration: 2s;
   animation-name: fade;
-  animation-duration: 4s;
+  animation-duration: 2s;
 }
 
 @-webkit-keyframes fade {
@@ -321,7 +321,7 @@ nav{
 }
 
 .sub-slide {
-  background: rgba(231, 155, 57, 0.6);
+  background: rgba(231, 155, 57, 0.9);
   height: 40px;
   width: 75%;
   border-radius: 10px;
@@ -490,7 +490,7 @@ nav{
     letter-spacing: 1px;
     color: #FFFFFF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-top: 5.2em;
+    margin-top: 4em;
   }
   .aside--s{
     height: auto;
@@ -539,7 +539,7 @@ nav{
     letter-spacing: 1px;
     color: #FFFFFF;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    margin-top: 5.6em;
+    margin-top: 4em;
   }
   .aside--p{
     height: auto;
@@ -739,6 +739,9 @@ MEDIA QUERYS
   .mySlides{
     height: 585px;
   }
+  .sub-slide {
+    width: 90%;
+  }
   .servicios h2{
     grid-column: 2/9;
     margin-left: 1em;
@@ -796,6 +799,9 @@ MEDIA QUERYS
   .onscroll{
     height: 40px;
     width: 95vw;
+  }
+  .sub-slide {
+    width: 90%;
   }
   .titulo__container p{
     font-size: 1.5rem;
