--- a/css/single.css
+++ b/css/single.css
@@ -45,8 +45,9 @@ main{
   padding: 2em;
 }
 .aside--noticias h1{
-  font-family: Boogaloo;
-  font-size: 2.5rem;
+  font-family: Amaranth;
+  font-size: 1.9rem;
+  text-align: center;
   color: white;
 }
 .img--noticias{
@@ -110,8 +111,12 @@ main{
   border-radius: 10px 10px 0 0 ;
   margin: 1.5em 0;
 }
+.flex-center{
+  align-self: center;
+}
 .aside-n{
   width: 77px;
+  
 }
 .content__footer{
   display: flex;
