--- a/css/archive-perfiles-artesania.css
+++ b/css/archive-perfiles-artesania.css
@@ -1,5 +1,5 @@
 .position-3-1 {
-  grid-template-rows: 20% 30% 50%;
+  grid-template-rows: 17% 35% 47%;
 }
 .position-3-1 h1{
   color:var(--artesania);
@@ -28,6 +28,11 @@
 }
 .btn__servicios{
   background: var(--artesania);
+}
+.btn__servicios:hover{
+  background: white;
+  border: 1px solid hsl(4, 100%, 62%);
+  color: hsl(4, 100%, 62%);
 }
 /* Fin Cartas */
 .aside--right h1{
