--- a/css/archive-perfiles.css
+++ b/css/archive-perfiles.css
@@ -1,10 +1,10 @@
 /* Desktop */
 main{
-  grid-template-rows: 18vh 81vh 80vh;
+  grid-template-rows: 18vh 81vh 81vh;
 }
 /* Grid Interna de sections */
 .grid--12-2{
-  grid-template-rows: 5% 80% 15%;
+  grid-template-rows: 5% 85% 10%;
 }
 .position-2-2{
   grid-column: 1/13;
@@ -35,7 +35,7 @@ main{
   flex-direction: column;
   background-color: #FFFFFF;
   width: 70%;
-  height: 50%;
+  height: max-content;
   margin: 2em auto auto auto;
   border-radius: 10px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
@@ -43,6 +43,32 @@ main{
   text-align: center;
   align-content:center;
 }
+#color-dondecomer:hover{
+  transition: .2s ease-in;
+  background-color: hsl(339, 100%, 63%);
+}
+#color-dondedormir:hover{
+  transition: .2s ease-in;
+  background-color: hsl(39, 100%, 63%);
+}
+#color-quevisitar:hover{
+  transition: .2s ease-in;
+  background-color: hsl(222, 100%, 73%);
+}
+#color-artesanias:hover{
+  transition: .2s ease-in;
+  background-color: hsl(4, 100%, 62%);
+}
+#color-emprendedores:hover{
+  transition: .2s ease-in;
+  background-color: hsl(29, 100%, 63%);
+}
+#color-productores:hover{
+  transition: .2s ease-in;
+  background-color: hsl(259, 100%, 70%);
+  border-radius: 0px 0px 8px 8px;
+}
+
 .cartas-cat h1{
   font-size: 1.5rem;
   color: Black;
@@ -63,6 +89,9 @@ main{
   padding: .9em;
   cursor: pointer;
   text-decoration: none;
+}
+.cartas-cat a:hover{
+  color: white;
 }
 .cartas-cat a:last-child{
   border: none;
@@ -121,6 +150,7 @@ main{
 .texto__container a {
   grid-column: 4/5;
   grid-row: 3/-1;
+  cursor: pointer;
 }
 .btn__servicios{
   height: 2em;
@@ -129,20 +159,18 @@ main{
   font-size: 1rem;
   border-radius: 5px;
   color: #FFFFFF;
-  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  /* text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); */
   border: none;
   margin-right: 1em;
+  transition: .6s ease-in-out;
+  cursor: pointer;
 }
-.btn__servicios a{
-  color: white;
-  text-decoration: none;
+.btn__servicios label{
+  cursor: pointer;
 }
 .btn__servicios:hover{
-  background-color: #4CAF50; /* Green */
-  color: white;
   scale: 1.05;
-  transition: 0.1s ease-in-out;
-  cursor: pointer;
+  transition: .6s ease-in;
 }
 /* Fin Cartas */
 
@@ -152,7 +180,7 @@ main{
  grid-row: 3/-1;
  display: inline-block;
  /* gap: 2em; */
- padding: 2.3em;
+ padding: 1em 0px 1em 0px;
  margin: 0 auto;
  font-family: Raleway;
 }
@@ -206,7 +234,7 @@ main{
 
 /* Interior Seccion 2 */
 .position-3-1 h1{
-  grid-column: 3/8;
+  grid-column: 2/9;
   grid-row: 1/-3;
   font-family: Amaranth;
   font-size: 2rem;
@@ -239,9 +267,16 @@ main{
   flex-direction: column;
   justify-content: space-between;
 }
+#map{
+  margin: 1.4em auto;
+  border-radius: 10px;
+  width: 17em;
+  flex-grow: 2;
+}
 .aside--right--color img{
   height: auto;
-  width: 12em;
+  /* width: 12em; */
+  width: 9.8em;
   /* margin: 2rem 2rem 0 2rem; */
   margin: auto;
 }
@@ -257,9 +292,9 @@ main{
 }
 
 
-@media (min-width: 1366px) and (max-width: 1600px){
+@media (min-width: 1367px) and (max-width: 1600px){
   main {
-    grid-template-rows: 20.5vh 81vh 80vh;
+    grid-template-rows: 20.5vh 79vh 90vh;
   }
   .cartas__container--servicios{
     gap: 1.5em;
@@ -286,7 +321,7 @@ main{
     height: 1.6em;
   }
   .paginacion{
-    padding: 1em;
+    padding: .2em 1em 0.3em 1em;
     grid-column: 3/11;
   }
   .position-3-1 h1{
@@ -295,6 +330,10 @@ main{
   }
   .collage--servicios img{
     width: 655px;
+  }
+  #map{
+    margin: 1.4em auto;
+    width: 14em;
   }
 }
 
@@ -317,11 +356,11 @@ main{
     margin: 0px 1rem 1rem 0px;
   }
   .cartas-cat{
-    height: 50%;
+    height: max-content;
     font-size: .8rem;
   }
   .cartas__container--servicios {
-    gap: 1.7em;
+    gap: 1.3em;
   }
   .cartas-cat h1{
     font-size: .9rem;
@@ -346,13 +385,17 @@ main{
   }
   .position-3-1 figure{
     justify-self: left;
-    margin-left: 1em;
+    margin-left: 0.2em;
   }
   .collage--servicios img {
     width: 40em;
   }
   .paginacion{
-    padding: 1.2em;
+    padding: 0;
+  }
+  #map{
+    margin: 1.4em auto;
+    width: 13.5em;
   }
 }
 
