--- a/css/archive-perfiles.css
+++ b/css/archive-perfiles.css
@@ -402,7 +402,7 @@ main{
 
 @media (min-width: 320px) and (max-width: 480px){
   main {
-    grid-template-rows: 20vh 77vh 80vh;
+    grid-template-rows: 21vh 77vh 77vh 77vh;
   }
   .grid--12-2 {
     grid-template-columns: repeat(6, 1fr);
@@ -437,9 +437,9 @@ main{
     grid-row: 1/2;
     margin: 0 auto;
     /* max-width: 20vw; */
-    justify-content: space-evenly;
+    justify-content: center;
     /* max-height: 64vh; */
-    max-width: 300px;
+    max-width: 350px;
   }
   .img--servicios {
     object-fit: cover;
@@ -462,16 +462,20 @@ main{
   }
   .paginacion2{
     display: flex;
-    gap: 1em;
+    /* gap: 1em; */
     grid-column: 1/7;
     grid-row: 2/3;
     z-index: 2;
-    padding: 1em;
-    margin: auto;
+    /* padding: 1em; */
+    margin: auto 0;
+    justify-content: space-evenly;
   }
   .btn-posts {
-    width: 5em;
+    width: 6em;
     border: none;
+    align-self: center;
+    font-family: Raleway;
+    color: black;
   }
 
   .texto__container h1 {
@@ -484,18 +488,20 @@ main{
 
   .position-3-1 {
     grid-column: 1/7;
-    gap: 15px;
+    gap: 0;
   }
   .position-3-1 h1{
-    grid-column: 2/6;
+    grid-column: 1/7;
     grid-row: 1/2;
-    margin: 1em 0;
+    margin: auto 0;
     font-size: 1.3rem;
   }
   .position-3-1 p{
-    grid-column: 2/6;
+    grid-column: 1/7;
     grid-row: 2/3;
     text-align: justify;
+    margin: 0 2.5em 0 2.5em;
+    line-height: 2em;
   }
   .collage--servicios{
     display: none;
@@ -506,5 +512,21 @@ main{
   }
   .aside--right--color img{
     width: 4em;
+  }
+  .mobile-title-servicios{
+    font-family: Raleway;
+    color: white;
+    font-size: 1.8rem;
+    padding: 0;
+    font-weight: 600;
+    /* line-height: 1.45em; */
+    text-align: center;
+    letter-spacing: 1px;
+    color: #FFFFFF;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* margin-top: 4em; */
+  }
+  #map{
+    width: 19.5em;
   }
 }
