--- a/css/home.css
+++ b/css/home.css
@@ -270,8 +270,11 @@ main {
     padding: 0;
   }
   .cartas--noticias {
-    min-width: 300px;
+    min-width: 317px;
+    /* min-width: 38vw; */
     border-radius: 10px;
+    max-width: 50vh;
+    max-height: 20vh;
   }
   .texto__container h1{
     grid-column: 1/5;
@@ -323,6 +326,39 @@ main {
   }
   .paginacion {
     display: none;
+  }
+  .aside--n{
+    display: none;
+  }
+  .paginacion2{
+    display: flex;
+    /* gap: 1em; */
+    grid-column: 1/7;
+    grid-row: 2/3;
+    z-index: 2;
+    /* padding: 1em; */
+    margin: auto 0;
+    justify-content: space-evenly;
+  }
+  .btn-posts {
+    width: 6em;
+    border: none;
+    align-self: center;
+    font-family: Raleway;
+    color: black;
+  }
+  .mobile-title-noticias{
+    font-family: Raleway;
+    color: white;
+    font-size: 1.8rem;
+    padding: 0;
+    font-weight: 600;
+    /* line-height: 1.45em; */
+    text-align: center;
+    letter-spacing: 1px;
+    color: #FFFFFF;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    /* margin-top: 4em; */
   }
 }
 
