--- a/css/archive-perfiles.css
+++ b/css/archive-perfiles.css
@@ -133,9 +133,10 @@ main{
   font-size: 1rem;
   color: white;
   text-align: center;
-  grid-column: 2/5;
+  grid-column: 1/6;
   grid-row: 1/-3;
   padding: .2em;
+  margin-left: 1em;
 }
 .extracto__descripcion{
   font-family: Raleway;
@@ -406,7 +407,7 @@ main{
   }
   .grid--12-2 {
     grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: 67vh 10vh;
+    grid-template-rows: 62vh 10vh;
 
   }
   .position-2-2 {
@@ -435,11 +436,12 @@ main{
   .cartas__container--servicios {
     grid-column: 1/7;
     grid-row: 1/2;
-    margin: 0 auto;
+    margin: 1em auto;
     /* max-width: 20vw; */
     justify-content: center;
     /* max-height: 64vh; */
     max-width: 350px;
+    height: max-content;
   }
   .img--servicios {
     object-fit: cover;
