--- a/css/home.css
+++ b/css/home.css
@@ -59,7 +59,7 @@ main {
   background: rgba(29, 45, 124, 0.8);
   border-radius: 0px 0px 0px 15px;
   /* width: 80%; */
-  height: 70%;
+  height: 2em;
   font-family: Raleway;
   font-weight: 600;
   font-size: 1rem;
@@ -67,7 +67,7 @@ main {
   text-align: center;
   grid-column: 2/5;
   grid-row: 1/-3;
-  padding-top: .2em;
+  padding-top: .35em;
 }
 .extracto__noticias{
   font-family: Raleway;
@@ -113,6 +113,9 @@ main {
 }
 
 /* Paginación */
+.paginacion2 {
+  display: none;
+}
 .paginacion{
   grid-column: 2/9;
   display: inline-block;
@@ -192,7 +195,27 @@ main {
    
  }
 
-
+@media (min-width: 1367px) and (max-width: 1600px){
+  .cartas__container--noticias {
+    width: auto;
+    max-width: auto;
+    gap: 1em;
+    padding: 1em;
+  }
+  .cartas--noticias{
+    min-width: 51.5em;
+  }
+  .title--noticias{
+    font-size: 1.4rem;
+    margin: 1.5em;
+  }
+  .texto__container h1 {
+    grid-column: 1/5;
+    width: 85%;
+    justify-self: self-end;
+    /* margin-left: 1em; */
+  }
+}
 
  /* MEDIA QUERIES CSS */
 @media screen and (max-width: 1366px) {
