--- a/css/single-perfil.css
+++ b/css/single-perfil.css
@@ -12,6 +12,9 @@ main{
   /* grid-row: 2/-2; */
 }
 
+.sellos {
+  display: none;
+}
 
 /* Interior */
 .carta__container{
@@ -21,7 +24,7 @@ main{
   border-radius: 10px;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.5));
   display: grid;
-  column-gap: 2em;
+  column-gap: .5em;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 18% 82%;
 }
@@ -29,7 +32,7 @@ main{
   font-family: Raleway;
 }
 .carta--titulo{
-  grid-column: 6/11;
+  grid-column: 5/12;
   grid-row: 1/-3;
   border-radius: 0px 0px 10px 10px;
 }
@@ -81,7 +84,7 @@ main{
   grid-row: 3/-1;
 }
 .carta--telefono{
-  margin-left: 1.7em;
+  /* margin-left: 1.7em; */
   grid-column: 4/5;
   grid-row: 2/-2;
 }
@@ -90,7 +93,7 @@ main{
   flex-grow: 2;
 }
 .carta--correo{
-  margin-left: 1em;
+  /* margin-left: 1em; */
   grid-column: 4/5;
   grid-row: 3/-1;
   /* text-align: center; */
@@ -104,6 +107,8 @@ main{
   width: 50%;
   justify-content: space-around;
   filter: invert(14%) sepia(77%) saturate(2932%) hue-rotate(211deg) brightness(91%) contrast(105%);
+  justify-self: center;
+  margin-right: .75em;
 }
 .icono--servicio{
   grid-column: 1/4;
@@ -119,7 +124,7 @@ main{
   text-align:center;
 }
 .icono--servicio img{
-  height: 15em;
+  height: 11em;
   width: auto;
   /* flex-shrink: 1;   */
 }
@@ -219,7 +224,10 @@ main{
 
 @media (min-width: 1366px) and (max-width: 1600px){
   .carta__container div {
-    font-size: 1em;
+    font-size: .9rem;
+  }
+  .info-contacto p {
+    font-size: .76rem;
   }
   .carta--img{
     margin: 1.4em 2em;
@@ -227,7 +235,35 @@ main{
   .aside--right img {
     width: 10em;
   }  
+  .carta--content {
+    grid-column: 6/12;
+  }
+  .carta--descripcion {
+    padding: .6em;
+  }
+  .rrss{
+    width: 40%;
+  }
+  .icono--servicio {
+    grid-column: 1/3;
+    width: 12em;
+  }
+  .que-visitar-title{
+    font-size: 2.5rem;
+  }
+  .galeria--productos{
+    grid-column: 3/10;
+    column-gap: .7em;
+    row-gap: .3em;
+    padding: .5em 0;
 
+  }
+  .producto img {
+    height: 9.7em;
+  }
+  .sellos{
+    display: none;
+  }
 }
 
 /* MEDIA QUERIES CSS */
@@ -287,7 +323,7 @@ main{
 
 @media (min-width: 320px) and (max-width: 480px) {
   main{
-    grid-template-rows: 18vh 130vh 195vh;
+    grid-template-rows: 21vh 130vh 195vh;
   }
   .grid--12-2{
     grid-template-rows: 77% 170% 7%;
@@ -307,13 +343,22 @@ main{
   .carta--titulo{
     grid-column: 1/7;
     grid-row: 1/2;
-    padding: 1em 2em;
+    /* padding: 1.5em 2em; */
+    display: flex;
+    justify-content: center;
+  }
+  .carta--titulo h3{
+    padding: 0;
+    font-size: 1.4rem;
+    align-self: center;
   }
   .carta--img{
     grid-column: 1/7;
     grid-row: 2/3;
     margin: .5em auto 0 auto;
-    width: 250px;
+    width: 18em;
+    height: 10.5em;
+    object-fit: cover;
   }
   .carta--content{
     grid-column: 1/7;
@@ -326,15 +371,26 @@ main{
   .carta--descripcion{
     grid-column: 1/7;
     grid-row: 1/2;
-    margin: .5em 0;
-    padding: 0em 1.5em;
+    margin: 1em 1.5em;
+    padding: 0;
     text-align: justify;
-    font-size: .9rem;
+    font-size: .85rem;
   }
   .info-contacto {
+    justify-content: center;
+    align-items: center;
+    font-size: .85rem;
+    width: 21.5em;
     margin: 0 auto;
-    justify-content: space-between;
-    font-size: .8rem;
+  }
+  .info-contacto img{
+    width: .95em;
+    margin-left: 1.5em;
+  }
+  .info-contacto p{
+    justify-content: flex-start;
+    flex-grow: 1;
+    margin-left: 1.7em;
   }
   .carta--nombre{
     grid-column: 1/7;
@@ -354,10 +410,10 @@ main{
     
     
   }
-  .info-contacto p {
+  /* .info-contacto p {
     flex-grow: 2;
     margin-left: 1.7em;
-  }
+  } */
 
   .rrss {
     display: flex;
@@ -367,9 +423,11 @@ main{
     flex-direction: row;
     margin: 0 auto .7em;
     align-items: end;
+    
   }
   .rrss img {
     width: 2em;
+    
   }
   .galeria--productos{
     grid-column: 1/7;
